--- a/HajosTeszt/HajosTeszt/wwwroot/hajo.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/hajo.html
@@ -4,26 +4,27 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=devicewidth, initial-scale=1.0">
     <link href="hajo.css" rel="stylesheet">
-    <title></title>
+    <script src="/hetedik.js"></script>
+    <title>Hajós teszt</title>
 </head>
 <body>
     <div id="külső">
         <div id="kérdés_szöveg">
-            <h2>Kérdés szövege</h2>
+            
         </div>
 
         <div id="középső">
 
             <div id="válaszok">
-                <div id="válasz1" class="kérdés kattintható jó">
+                <div id="válasz1" onclick="Válasz1()" class="kérdés kattintható">
                     Válasz 1
                 </div>
 
-                <div id="válasz2" class="kérdés kattintható">
+                <div id="válasz2" onclick="Válasz2()" class="kérdés kattintható">
                     Válasz 2
                 </div>
 
-                <div id="válasz3 rossz" class="kérdés kattintható rossz">
+                <div id="válasz3" onclick="Válasz3()" class="kérdés kattintható">
                     Válasz 3
                 </div>
             </div>
@@ -34,8 +35,8 @@
         </div>
 
         <div id="vezérlő">
-            <div class="gomb kattintható">Vissza</div>
-            <div class="gomb kattintható">Előre</div>
+            <div onclick="Vissza()" class="gomb kattintható">Vissza</div>
+            <div onclick="Előre()" class="gomb kattintható">Előre</div>
         </div>
     </div>
 </body>
