--- a/HajosTeszt/HajosTeszt/wwwroot/hajo.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/hajo.html
@@ -16,27 +16,27 @@
         <div id="középső">
 
             <div id="válaszok">
-                <div id="válasz1" onclick="Válasz1()" class="kérdés kattintható">
+                <div id="válasz1" onclick="Válasz1Új()" class="kérdés kattintható">
                     Válasz 1
                 </div>
 
-                <div id="válasz2" onclick="Válasz2()" class="kérdés kattintható">
+                <div id="válasz2" onclick="Válasz2Új()" class="kérdés kattintható">
                     Válasz 2
                 </div>
 
-                <div id="válasz3" onclick="Válasz3()" class="kérdés kattintható">
+                <div id="válasz3" onclick="Válasz3Új()" class="kérdés kattintható">
                     Válasz 3
                 </div>
             </div>
 
             <div id="kép">
-                <img id="kép1" src="https://szoft1.comeback.hu/hajo/teszt-0050.jpg" />
+                <img id="kép1" src=""/>
             </div>
         </div>
 
         <div id="vezérlő">
-            <div onclick="Vissza()" class="gomb kattintható">Vissza</div>
-            <div onclick="Előre()" class="gomb kattintható">Előre</div>
+            <div onclick="VisszaÚj()" class="gomb kattintható">Vissza</div>
+            <div onclick="ElőreÚj()" class="gomb kattintható">Előre</div>
         </div>
     </div>
 </body>
