--- a/HajosTeszt/HajosTeszt/wwwroot/hajo.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/hajo.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=devicewidth, initial-scale=1.0">
     <link href="hajo.css" rel="stylesheet">
-    <script src="/hetedik.js"></script>
+    <script src="/tizedik.js"></script>
     <title>Hajós teszt</title>
 </head>
 <body>
@@ -16,15 +16,15 @@
         <div id="középső">
 
             <div id="válaszok">
-                <div id="válasz1" onclick="Válasz1Új()" class="kérdés kattintható">
+                <div id="válasz1" onclick="Válasz1()" class="kérdés kattintható">
                     Válasz 1
                 </div>
 
-                <div id="válasz2" onclick="Válasz2Új()" class="kérdés kattintható">
+                <div id="válasz2" onclick="Válasz2()" class="kérdés kattintható">
                     Válasz 2
                 </div>
 
-                <div id="válasz3" onclick="Válasz3Új()" class="kérdés kattintható">
+                <div id="válasz3" onclick="Válasz3()" class="kérdés kattintható">
                     Válasz 3
                 </div>
             </div>
@@ -35,8 +35,8 @@
         </div>
 
         <div id="vezérlő">
-            <div onclick="VisszaÚj()" class="gomb kattintható">Vissza</div>
-            <div onclick="ElőreÚj()" class="gomb kattintható">Előre</div>
+            <div onclick="Vissza()" class="gomb kattintható">Vissza</div>
+            <div onclick="Előre()" class="gomb kattintható">Előre</div>
         </div>
     </div>
 </body>
