--- a/HajosTeszt/HajosTeszt/wwwroot/hajo.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/hajo.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=devicewidth, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="hajo.css" rel="stylesheet">
     <script src="/tizedik.js"></script>
     <title>Hajós teszt</title>
@@ -16,27 +16,27 @@
         <div id="középső">
 
             <div id="válaszok">
-                <div id="válasz1" onclick="Válasz1()" class="kérdés kattintható">
+                <div id="válasz1" onclick="választás(1)" class="kérdés kattintható">
                     Válasz 1
                 </div>
 
-                <div id="válasz2" onclick="Válasz2()" class="kérdés kattintható">
+                <div id="válasz2" onclick="választás(2)" class="kérdés kattintható">
                     Válasz 2
                 </div>
 
-                <div id="válasz3" onclick="Válasz3()" class="kérdés kattintható">
+                <div id="válasz3" onclick="választás(3)" class="kérdés kattintható">
                     Válasz 3
                 </div>
             </div>
 
-            <div id="kép">
-                <img id="kép1" src=""/>
+            <div id="kép_keret">
+                <img id="kép" src=""/>
             </div>
         </div>
 
         <div id="vezérlő">
-            <div onclick="Vissza()" class="gomb kattintható">Vissza</div>
-            <div onclick="Előre()" class="gomb kattintható">Előre</div>
+            <div onclick="vissza()" class="gomb kattintható">Vissza</div>
+            <div onclick="előre()" class="gomb kattintható">Előre</div>
         </div>
     </div>
 </body>
